XIVY-10393 Fix manually created urls to query ES